--- a/style.css
+++ b/style.css
@@ -2,9 +2,42 @@
     margin: 0;
     padding: 0;
 }
-.important-descriptions {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 900;
+body {
+    background-color: #3A0CA3; 
+}
+
+#header {
+    display: inline-block;
+}
+
+.description, .first-div, #photo, .title, .top-page {
+    display: inline-block;
+    margin: 5px;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 200%;
+    font-family: monospace;
+    text-decoration: underline;
+    color: rgb(0, 0, 0);
+    padding: 5px;
+    border-style: outset;
+    border-radius: 10px;
+    background-color: azure;
+    margin: 0 0 1% 55%;
+
+}
+
+#photo {
+    padding: 1%;
+    background-color: #ffff;
+    border-radius: 5%;
+    display: inline-block;
+}
+
+.first-div {
+    margin-right: 90%;
 }
 
 #about-author {
@@ -12,17 +45,6 @@
     background-color: aliceblue;
     padding: 6px;
     border-radius: 6px;
-}
-
-body {
-    background-color: #3A0CA3; 
-}
-
-#word-bio {
-    background-color: aliceblue;
-    padding: 30px;
-    border-radius: 10px;
-    text-align: center;
 }
 
 #bio {
@@ -41,13 +63,5 @@ body {
     padding: 22px;
     border-radius: 3px;
     background-color: aliceblue;
-}
-
-#header-photo {
-    margin-left: 0;
-}
-
-#header-title {
-    text-align: center;
 }
 
