--- a/style.css
+++ b/style.css
@@ -1,16 +1,42 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-#img {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    align-items: center;
+body {
+  background-color: #181818;
+}
+
+.icons {
+  width: 45px;
+  height: 45px;
+  border: solid black 1px
+}
+
+nav {
+  align-items: center;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border: solid black 1px;
+}
+
+.id-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: solid black 1px
+}
+
+/* #img {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+   align-items: center;
 }
 
 #img img {
-    border-radius: 35px;
-    width: 400px;
-}
+  border-radius: 35px;
+  width: 400px;
+} */
